# make-stage1-eval

./: Eval.hs  Main.hs  Parser.hs  Syntax.hs  makeeval.cabal
test/: Gen.hs  MakeIO.hs  ParserSpec.hs
