cabal-version:       2.4
name:                makeeval
version:             0.1.0.0
license:             NONE
license-file:        LICENSE
author:              Christopher Schwaab
maintainer:          christopher.schwaab@gmail.com
extra-source-files:  CHANGELOG.md
executable makeeval
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0,
                       void >=0.7.3,
                       text >=1.2.4,
                       mtl >=2.2.2,
                       megaparsec >=7.0.0,
                       shelly >=1.8.1,
                       docopt >=0.7.0.5,
                       containers >=0.6.0.1,
                       text-show >=3.8.2,
                       Glob >=0.10.0,
                       filepath >=1.4.2.1,
                       parser-combinators >=1.2.0,
  default-language:    Haskell2010
  extensions:          OverloadedStrings, TypeOperators, ViewPatterns
