cabal-version:       2.4
name:                makeeval
version:             0.1.0.0
license:             NONE
license-file:        LICENSE
author:              Christopher Schwaab
maintainer:          christopher.schwaab@gmail.com

library
  build-depends:       base ^>=4.12.0.0,
                       void >=0.7.3,
                       text >=1.2.4,
                       mtl >=2.2.2,
                       megaparsec >=7.0.0,
                       shelly >=1.8.1,
                       docopt >=0.7.0.5,
                       containers >=0.6.0.1,
                       text-show >=3.8.2,
                       Glob >=0.10.0,
                       filepath >=1.4.2.1,
                       parser-combinators >=1.2.0,
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, TypeOperators
  exposed-modules:     Parser, Syntax, Eval

executable makeeval
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0,
                       void >=0.7.3,
                       text >=1.2.4,
                       mtl >=2.2.2,
                       megaparsec >=7.0.0,
                       shelly >=1.8.1,
                       docopt >=0.7.0.5,
                       containers >=0.6.0.1,
                       text-show >=3.8.2,
                       Glob >=0.10.0,
                       filepath >=1.4.2.1,
                       parser-combinators >=1.2.0,
                       docopt >=0.7.0.5,
  other-modules:       Parser, Syntax, Eval
  default-extensions:  OverloadedStrings, QuasiQuotes, TemplateHaskell
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
    test
  build-depends:
    base ^>=4.12.0.0,
    hspec >=2.7.1,
    megaparsec >=7.0.0,
    void >=0.7.3,
    text >=1.2.4,
    hspec-megaparsec >=2.0.1,
    bytestring >=0.10.8.2,
    QuickCheck >=2.13.2,
    quickcheck-text >=0.1.2.1,
    raw-strings-qq >=1.1,
    makeeval
  other-modules: ParserSpec, Gen
  build-tool-depends: hspec-discover:hspec-discover >=2.7.1
  default-language:   Haskell2010
  default-extensions: OverloadedStrings, TypeOperators, QuasiQuotes
